--- a/src/assets/css/trip.css
+++ b/src/assets/css/trip.css
@@ -66,13 +66,10 @@ header {
   display: flex;
   padding: 28px;
   align-items: center;
+  /* On hover, add a black background color with a little bit see-through */
+  /* Fading animation */
 }
-.trip_section img {
-  width: 50%;
-  height: 360px;
-  margin-left: -25px;
-}
-.trip_section > div {
+.trip_section .slider_info {
   width: 50%;
   height: 400px;
   border: 1px solid #1F1F1F;
@@ -80,4 +77,52 @@ header {
   display: flex;
   flex-direction: column;
   gap: 60px;
+}
+.trip_section .slider_info a {
+  color: #1F1F1F;
+}
+.trip_section .slider {
+  margin-top: 54px;
+  margin-left: -8px;
+  border: none;
+}
+.trip_section .slider img {
+  width: 450px;
+  height: 360px;
+  margin-left: -25px;
+}
+.trip_section .next {
+  cursor: pointer;
+  padding: 12px;
+  margin-left: -37px;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  background-color: #8F755A;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
+  /* Position the "next button" to the right */
+  left: 425px;
+  bottom: 200px;
+  border-radius: 3px 0 0 3px;
+  z-index: 1;
+}
+.trip_section .next:hover {
+  background-color: #B69C7C;
+  opacity: 0.8;
+  color: #1F1F1F;
+}
+.trip_section .fade {
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+@keyframes fade {
+  from {
+    opacity: 0.8;
+  }
+  to {
+    opacity: 1;
+  }
 }/*# sourceMappingURL=trip.css.map */
