--- a/src/assets/scss/trip.scss
+++ b/src/assets/scss/trip.scss
@@ -22,21 +22,76 @@ header {
         @extend %body;
     }
 
-    img {
-        width: 50%;
-        height: 360px;
-        margin-left: -25px;
-        
-    }
+ 
 
-    >div {
+    .slider_info {
         width: 50%;
         height: 400px;
         border: 1px solid $gray_800;
         padding: 56px;
         display: flex;
         flex-direction: column;
-        gap:60px;
+        gap: 60px;
+        
+        a{
+            color: $gray_800;
+        }
     }
 
+    .slider{
+        margin-top: 54px;
+        margin-left: -8px;
+        border:none;
+
+        img {
+            width: 450px;
+            height: 360px;
+            margin-left: -25px;
+    
+        }
+  
+    }
+
+    .next {
+        cursor: pointer;
+        padding: 12px;
+        margin-left: -37px;
+        font-weight: bold;
+        font-size: 18px;
+        transition: 0.6s ease;
+        border-radius: 0 3px 3px 0;
+        background-color: $main_600;
+        user-select: none;
+        /* Position the "next button" to the right */
+        left: 425px;
+        bottom:200px;
+        border-radius: 3px 0 0 3px;
+        z-index: 1;
+
+    }
+
+
+    /* On hover, add a black background color with a little bit see-through */
+    .next:hover {
+        background-color: $main_400;
+        opacity: .8;
+        color: $gray_800;
+    }
+
+    /* Fading animation */
+    .fade {
+        animation-name: fade;
+        animation-duration: 1.5s;
+    }
+
+    @keyframes fade {
+        from {
+            opacity: .8
+        }
+
+        to {
+            opacity: 1
+        }
+    }
 }
+
