--- a/src/assets/css/order.css
+++ b/src/assets/css/order.css
@@ -31,7 +31,7 @@
   letter-spacing: 5%;
 }
 
-header {
+.order_hero {
   background-image: url("/src/assets/images/train_exterior/train_exterior_8.png.png");
 }
 
