--- a/src/assets/scss/_public.scss
+++ b/src/assets/scss/_public.scss
@@ -29,6 +29,13 @@ $success_400:#6DAA7C;
 $success_200:#A3D3AC;
 $success_50:#DCEFE0;
 
+$danger_800:#7A2C2A;
+$danger_600:#A63F3C;
+$danger_400:#D1534F;
+$danger_200:#E78F8A;
+$danger_50:#F6D6D4;
+
+
 
 
 %h1{
