--- a/src/assets/scss/header.scss
+++ b/src/assets/scss/header.scss
@@ -5,7 +5,7 @@
 header {
     // @apply text-center w-full bg-no-repeat;
     text-align: center;
-    background-image: url('../images/train_exterior/Facilities_hero.png');
+    // background-image: url('../images/train_exterior/Facilities_hero.png');
     width: 100vw;
     height: 640px;
     background-repeat: no-repeat;
