--- a/src/assets/scss/order.scss
+++ b/src/assets/scss/order.scss
@@ -1,7 +1,7 @@
 @import 'public.scss';
 
 // @import 'reset.scss';
-header {
+.order_hero {
     background-image: url('/src/assets/images/train_exterior/train_exterior_8.png.png');
 }
 
