--- a/src/assets/css/reservation.css
+++ b/src/assets/css/reservation.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&family=Noto+Serif+TC:wght@200..900&display=swap");
 .reservation h6 {
   font-family: "Noto Serif TC", "Noto Sans TC";
@@ -16,6 +17,14 @@
   letter-spacing: 2%;
 }
 
+.user_info span {
+  font-family: "Noto Sans TC";
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 150%;
+  letter-spacing: 2%;
+}
+
 .user_info button {
   font-family: "Noto Sans TC";
   font-size: 16px;
@@ -24,7 +33,7 @@
   letter-spacing: 5%;
 }
 
-header {
+.reservation_hero {
   background-image: url("/src/assets/images/train_interior/train_interior_01.png");
 }
 
@@ -66,11 +75,12 @@ header {
   display: flex;
   flex-direction: column;
   margin: 0 12px 12px 12px;
-  justify-content: start;
   gap: 12px;
 }
 .form_seat img {
+  margin: 0 12px 0 auto;
   width: 76.5%;
+  height: 384px;
 }
 
 .order_list {
@@ -136,11 +146,24 @@ header {
   letter-spacing: 4px;
   float: right;
   border-radius: 25px;
-  border: 1px solid #1F1F1F;
+  border: 1px solid #434343;
   background-color: #D9D9D9;
 }
 .user_info button::after {
   content: "";
   display: block;
   clear: both;
+}
+.user_info button:hover {
+  background-color: #8C8C8C;
+  cursor: pointer;
+}
+.user_info span {
+  color: #D1534F;
+  margin-left: 12px;
+  visibility: hidden;
+}
+.user_info span.active {
+  visibility: visible;
+  /* 當有錯誤時顯示 */
 }/*# sourceMappingURL=reservation.css.map */
