--- a/src/assets/css/tripInfo.css
+++ b/src/assets/css/tripInfo.css
@@ -50,7 +50,7 @@
   letter-spacing: 5%;
 }
 
-header {
+.tripInfo_hero {
   background-image: url("/src/assets/images/train_exterior/tripInfo_hero02.png");
 }
 
@@ -219,4 +219,18 @@ main {
 }
 .jp_dessert_info .dessert_section:last-of-type {
   padding-left: 28px;
+}
+
+.fade, main {
+  animation-name: fade;
+  animation-duration: 4s;
+}
+
+@keyframes fade {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }/*# sourceMappingURL=tripInfo.css.map */
