--- a/src/assets/scss/tripInfo.scss
+++ b/src/assets/scss/tripInfo.scss
@@ -1,7 +1,7 @@
 @import 'public.scss';
 // @import 'reset.scss';
 
-header {
+.tripInfo_hero {
     background-image: url('/src/assets/images/train_exterior/tripInfo_hero02.png');
 
 }
@@ -9,6 +9,7 @@ header {
 main {
     // background-color: antiquewhite;
     margin: 28px auto;
+    @extend .fade;
 }
 
 // 行程頁籤
@@ -70,9 +71,11 @@ main {
         }
 
         img {
+            // @extend .fade;
             width: 550px;
             height: 350px;
             border: 1px solid $gray_800;
+            
         }
 
     }
@@ -150,6 +153,7 @@ main {
             }
 
             img {
+                // @extend .fade;
                 width: 450px;
                 height: 393px;
                 object-fit: cover;
@@ -163,6 +167,7 @@ main {
             width: 50%;
 
             img {
+                // @extend .fade;
                 margin: 28px auto;
                 // padding: 28px;
                 width: 450px;
@@ -210,6 +215,7 @@ main {
         }
 
         img {
+            // @extend .fade;
             width: 100%;
             height: 450px;
             border: 1px solid $gray_800;
@@ -218,5 +224,20 @@ main {
         &:last-of-type{
             padding-left: 28px;
         }
+    }
+}
+
+.fade {
+    animation-name: fade;
+    animation-duration: 4s;
+}
+
+@keyframes fade {
+    from {
+        opacity: 0
+    }
+
+    to {
+        opacity: 1
     }
 }
