--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -678,6 +678,10 @@ video {
   right: 1rem;
 }
 
+.right-5 {
+  right: 1.25rem;
+}
+
 .z-10 {
   z-index: 10;
 }
@@ -791,6 +795,14 @@ video {
 
 .mt-5 {
   margin-top: 1.25rem;
+}
+
+.mb-5 {
+  margin-bottom: 1.25rem;
+}
+
+.mt-20 {
+  margin-top: 5rem;
 }
 
 .block {
@@ -937,6 +949,10 @@ video {
   max-height: 900px;
 }
 
+.max-h-\[500px\] {
+  max-height: 500px;
+}
+
 .w-1 {
   width: 0.25rem;
 }
@@ -991,6 +1007,10 @@ video {
 
 .w-3\/5 {
   width: 60%;
+}
+
+.w-1\/4 {
+  width: 25%;
 }
 
 .max-w-\[1920px\] {
@@ -1231,6 +1251,10 @@ video {
   border-style: solid;
 }
 
+.border-dashed {
+  border-style: dashed;
+}
+
 .border-none {
   border-style: none;
 }
@@ -1238,6 +1262,11 @@ video {
 .border-\[\#8F755A\] {
   --tw-border-opacity: 1;
   border-color: rgb(143 117 90 / var(--tw-border-opacity));
+}
+
+.border-\[\#4a3f35\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(74 63 53 / var(--tw-border-opacity));
 }
 
 .bg-\[\#634A34\] {
@@ -1461,6 +1490,18 @@ video {
   padding-top: 6rem;
 }
 
+.pl-14 {
+  padding-left: 3.5rem;
+}
+
+.pr-5 {
+  padding-right: 1.25rem;
+}
+
+.pt-5 {
+  padding-top: 1.25rem;
+}
+
 .text-left {
   text-align: left;
 }
@@ -1538,6 +1579,10 @@ video {
   letter-spacing: 0.1em;
 }
 
+.text-\[14px\] {
+  font-size: 14px;
+}
+
 .font-bold {
   font-weight: 700;
 }
@@ -1548,6 +1593,14 @@ video {
 
 .font-semibold {
   font-weight: 600;
+}
+
+.font-medium {
+  font-weight: 500;
+}
+
+.italic {
+  font-style: italic;
 }
 
 .leading-relaxed {
@@ -1586,6 +1639,16 @@ video {
 .text-\[\#2e2e2e\] {
   --tw-text-opacity: 1;
   color: rgb(46 46 46 / var(--tw-text-opacity));
+}
+
+.text-\[\#4a3f35\] {
+  --tw-text-opacity: 1;
+  color: rgb(74 63 53 / var(--tw-text-opacity));
+}
+
+.text-gray-600 {
+  --tw-text-opacity: 1;
+  color: rgb(75 85 99 / var(--tw-text-opacity));
 }
 
 .underline {
