--- a/src/assets/scss/reservation.scss
+++ b/src/assets/scss/reservation.scss
@@ -42,33 +42,53 @@
     div {
         display: flex;
         flex-direction: column;
-        gap: 12px;
+        // gap: 8px;
         margin: 12px auto;
         justify-content: end;
-        width: 20%;
+        width: 18%;
     }
 }
 
 .form_seat {
     margin: auto;
-    >div {
-        width: 20%;
-    }
 
-    div {
+
+    .seat_title {
+        width: 20%;
         display: flex;
         flex-direction: column;
         margin: 0 12px 12px 12px;
         // justify-content: start;
         // align-items: flex-start;
-        gap: 12px;
+        gap: 24px;
+
+        div:nth-of-type(1),
+        div:nth-of-type(2) {
+            display: flex;
+            flex-direction: column;
+            gap: 12px;
+
+        }
+    }
+
+    object {
+        margin: auto;
+        width: 100%;
+        height: 384px;
+    }
+
+    p {
+        text-align: center;
+        margin: auto;
+        @extend %body2;
+        writing-mode: horizontal-tb;
 
     }
 
-    img {
-        margin: 0 12px 0 auto;
-        width: 76.5%;
-        height: 384px;
+    .seat_img {
+        margin: auto 24px;
+        width: 100%;
+        text-align: center;
     }
 }
 
@@ -142,14 +162,15 @@
 
 // 右側訂單明細
 .order_detail {
-    margin: 0 auto;
-
+    margin: auto;
+    border-radius: 25px;
+    overflow: hidden;
     p {
         width: 350px;
         display: flex;
         padding: 22px 12px;
         justify-content: space-between;
-        background-color: $gray_200;
+        background-color: rgba(255,255,255,.8);
         @extend %body;
     }
 
@@ -171,7 +192,7 @@
         float: right;
         border-radius: 25px;
         border: 1px solid $gray_600;
-        background-color: $gray_200;
+        background-color: rgba(255,255,255,.8);
 
         &::after {
             content: "";
@@ -180,7 +201,7 @@
         }
 
         &:hover {
-            background-color: $gray_400;
+            border: 2px solid $gray_600;
             cursor: pointer;
         }
     }
