--- a/src/assets/css/order.css
+++ b/src/assets/css/order.css
@@ -32,7 +32,7 @@
 }
 
 .order_hero {
-  background-image: url("/src/assets/images/train_exterior/train_exterior_8.png.png");
+  background-image: url("/src/assets/images/train_exterior/train_exterior_8.png");
 }
 
 .order {
@@ -48,6 +48,12 @@
 .order h5 {
   border-bottom: 2px solid #1F1F1F;
   margin: 28px 0;
+}
+
+.order_info {
+  border-radius: 25px;
+  background-color: rgba(255, 255, 255, 0.8);
+  padding: 24px;
 }
 
 .order_info_section {
@@ -70,9 +76,12 @@
   display: block;
   width: 150px;
   height: 50px;
-  background-color: #D9D9D9;
+  background-color: rgba(255, 255, 255, 0.8);
   text-decoration: none;
   color: #1F1F1F;
   line-height: 50px;
   border-radius: 35px;
+}
+.order_info_section div:last-of-type a:hover {
+  border: 1px solid #1F1F1F;
 }/*# sourceMappingURL=order.css.map */
