--- a/src/assets/css/reservation.css
+++ b/src/assets/css/reservation.css
@@ -17,7 +17,7 @@
   letter-spacing: 2%;
 }
 
-.user_info span {
+.user_info span, .form_seat p {
   font-family: "Noto Sans TC";
   font-size: 14px;
   font-weight: 400;
@@ -59,28 +59,41 @@
 .form_apply div {
   display: flex;
   flex-direction: column;
-  gap: 12px;
   margin: 12px auto;
   justify-content: end;
-  width: 20%;
+  width: 18%;
 }
 
 .form_seat {
   margin: auto;
 }
-.form_seat > div {
+.form_seat .seat_title {
   width: 20%;
-}
-.form_seat div {
   display: flex;
   flex-direction: column;
   margin: 0 12px 12px 12px;
+  gap: 24px;
+}
+.form_seat .seat_title div:nth-of-type(1),
+.form_seat .seat_title div:nth-of-type(2) {
+  display: flex;
+  flex-direction: column;
   gap: 12px;
 }
-.form_seat img {
-  margin: 0 12px 0 auto;
-  width: 76.5%;
+.form_seat object {
+  margin: auto;
+  width: 100%;
   height: 384px;
+}
+.form_seat p {
+  text-align: center;
+  margin: auto;
+  writing-mode: horizontal-tb;
+}
+.form_seat .seat_img {
+  margin: auto 24px;
+  width: 100%;
+  text-align: center;
 }
 
 .order_list {
@@ -124,14 +137,16 @@
 }
 
 .order_detail {
-  margin: 0 auto;
+  margin: auto;
+  border-radius: 25px;
+  overflow: hidden;
 }
 .order_detail p {
   width: 350px;
   display: flex;
   padding: 22px 12px;
   justify-content: space-between;
-  background-color: #D9D9D9;
+  background-color: rgba(255, 255, 255, 0.8);
 }
 
 .user_info {
@@ -147,7 +162,7 @@
   float: right;
   border-radius: 25px;
   border: 1px solid #434343;
-  background-color: #D9D9D9;
+  background-color: rgba(255, 255, 255, 0.8);
 }
 .user_info button::after {
   content: "";
@@ -155,7 +170,7 @@
   clear: both;
 }
 .user_info button:hover {
-  background-color: #8C8C8C;
+  border: 2px solid #434343;
   cursor: pointer;
 }
 .user_info span {
