--- a/src/assets/css/trip.css
+++ b/src/assets/css/trip.css
@@ -77,6 +77,7 @@
   display: flex;
   flex-direction: column;
   gap: 60px;
+  background-color: white;
 }
 .trip_section .slider_info a {
   color: #1F1F1F;
@@ -94,7 +95,7 @@
 .trip_section .next {
   cursor: pointer;
   padding: 12px;
-  margin-left: -37px;
+  margin-left: -38px;
   font-weight: bold;
   font-size: 18px;
   transition: 0.6s ease;
