--- a/src/assets/scss/trip.scss
+++ b/src/assets/scss/trip.scss
@@ -37,6 +37,7 @@ main{
         display: flex;
         flex-direction: column;
         gap: 60px;
+        background-color: white;
 
         a{
             color: $gray_800;
@@ -60,7 +61,7 @@ main{
     .next {
         cursor: pointer;
         padding: 12px;
-        margin-left: -37px;
+        margin-left: -38px;
         font-weight: bold;
         font-size: 18px;
         transition: 0.6s ease;
