--- a/src/routes/user/login.css
+++ b/src/routes/user/login.css
@@ -1,4 +1,4 @@
-.main>div {
+.main>#card {
     margin: auto;
     position: absolute;
     top: 0;
@@ -7,12 +7,54 @@
     right: 0;
     width: 18rem;
     height: 24rem;
-    background-color: #F4F4F4;
+    background-color: rgba(255,245,245, 0.4);
     border-radius: 0 1rem 0 1rem;
-    padding: 2.5rem;
+    padding: 3rem;
+    box-shadow: 0 0 2px rgba(255,245,245, 0.8);
+    backdrop-filter: blur(8px);
 }
 
-.main>div>div {
+.main>#card>div>div {
     text-align: center;
-    margin: 0 0 2.5rem 0;
+}
+
+#mainbody {
+    padding:0 0 1rem 0;
+}
+
+body, html {
+    scroll-behavior: smooth;
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    overflow: hidden; 
+    /* 防止滾動條出現 */
+}
+
+/* .main{
+    z-index:1;
+} */
+
+.fullscreen-background {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url('../../assets/images/train_exterior/tripInfo_SeaLg02.png'); /* 替換為你的背景圖片URL */
+    background-size: cover; /* 使圖片填滿 */
+    background-position: center; /* 置中 */
+    z-index: 0; /* 背景層 */
+    filter: blur(4px);
+    opacity: 0.6;
+}
+
+input {
+    background: transparent;
+    font-weight: bold;
+}
+input::placeholder {
+    font-weight: normal;
+    background: transparent;
+    color: #FFF;
 }
