--- a/src/routes/user/login.css
+++ b/src/routes/user/login.css
@@ -31,9 +31,9 @@ body, html {
     /* 防止滾動條出現 */
 }
 
-/* .main{
+.main{
     z-index:1;
-} */
+}
 
 .fullscreen-background {
     position: fixed;
@@ -41,10 +41,10 @@ body, html {
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url('../../assets/images/train_exterior/tripInfo_SeaLg02.png'); /* 替換為你的背景圖片URL */
+    background-image: url('../../assets/images/train_exterior/tripInfo_GrassSm01.png'); /* 替換為你的背景圖片URL */
     background-size: cover; /* 使圖片填滿 */
     background-position: center; /* 置中 */
-    z-index: 0; /* 背景層 */
+    z-index: -1; 
     filter: blur(4px);
     opacity: 0.6;
 }
@@ -56,5 +56,24 @@ input {
 input::placeholder {
     font-weight: normal;
     background: transparent;
-    color: #FFF;
+    color: rgba(0, 0, 0, 0.3);
 }
+
+input[type="radio"] {
+    appearance: none;
+  
+    border-radius: 50%;
+    width: 16px;
+    height: 16px;
+  
+    border: 2px solid #999;
+    transition: 0.2s all linear;
+    margin-right: 5px;
+  
+    position: relative;
+    top: 4px;
+  }
+  
+  input[type="radio"]:checked {
+    border: 6px solid black;
+  }
