--- a/src/routes/user/signin.css
+++ b/src/routes/user/signin.css
@@ -6,16 +6,15 @@
     margin: auto;
     width: 18rem;
     height: auto;
-    background-color: #F4F4F4;
+    background-color: rgba(255,245,245, 0.4);
     border-radius: 0 1rem 0 1rem;
-    padding: 2.5rem;
+    padding: 3rem;
+    /* box-shadow: 0 0 2px rgba(255,245,245, 0.8); */
+    backdrop-filter: blur(8px);
 }
 
 #main>div>div>div {
-    text-align: center;
+    /* text-align: center; */
     margin: 0 0 1rem 0;
 }
 
-p {
-    text-align: center;
-}
