--- a/src/routes/user/signin.css
+++ b/src/routes/user/signin.css
@@ -18,3 +18,16 @@
     margin: 0 0 1rem 0;
 }
 
+.full-background {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url('../../assets/images/train_exterior/tripInfo_SeaLg01.png'); 
+    background-size: cover; /* 使圖片填滿 */
+    background-position: center; /* 置中 */
+    z-index: -1; 
+    filter: blur(4px);
+    opacity: 0.6;
+}
